# smard-data

./: .gitignore  README.md  data_analysis.py  datapipe.py  dvc.yaml  generate_report.py  pyproject.toml
.cursor/rules/: python-guidelines.mdc
analysis/: 01_data_analysis.py
jobs/: download_raw_data.py
src/smard_data/: __init__.py  api.py  config.py  paths.py
tests/: generate_report.py  test_api.py  test_api_integration.py
