[project]
name = "smard-data"
version = "0.1.0"
description = "SMARD data analysis"
readme = "README.md"
authors = [
    { name = "cgroll", email = "groll.christian.edu@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
