[project]
name = "smard-data"
version = "0.1.0"
description = "SMARD data analysis"
readme = "README.md"
authors = [
    { name = "cgroll", email = "groll.christian.edu@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "dvc>=3.59.1",
    "ipykernel>=6.29.5",
    "jupytext>=1.17.0",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
